--- a/MyThirdProject/WebPage1.cshtml
+++ b/MyThirdProject/WebPage1.cshtml
@@ -43,7 +43,10 @@
                 <td>HTTP Request Type</td>
             </tr>
             <tr>
-                <td></td>
+                <td>@Request.Url</td>
+                <td>@Request.FilePath</td>
+                <td>@Request.MapPath(Request.FilePath)</td>
+                <td>@Request.RequestType</td>
             </tr>
 
         </table>
